--- a/box-shadow.html
+++ b/box-shadow.html
@@ -40,8 +40,8 @@
 
             .div li {
                 border-radius: 6px;
-                padding: 5em;
-                margin: 1.25rem;
+                padding: 6em;
+                margin: 10px;
                 flex: 0 0 17.3vw;
                 height: 17.3vw;
                 display: block;
