--- a/index.html
+++ b/index.html
@@ -39,25 +39,7 @@
                 alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a>
     </div>
     <div class="preloader">
-        <div class="preloader-body">
-            <div class="cssload-bell">
-                <div class="cssload-circle">
-                    <div class="cssload-inner"></div>
-                </div>
-                <div class="cssload-circle">
-                    <div class="cssload-inner"></div>
-                </div>
-                <div class="cssload-circle">
-                    <div class="cssload-inner"></div>
-                </div>
-                <div class="cssload-circle">
-                    <div class="cssload-inner"></div>
-                </div>
-                <div class="cssload-circle">
-                    <div class="cssload-inner"></div>
-                </div>
-            </div>
-        </div>
+        <!-- Import Preloader -->
     </div>
     <div class="page">
         <!-- Page Header-->
@@ -634,8 +616,9 @@
     <script src="js/core.min.js"></script>
     <script src="js/script.js"></script>
     <script type="module">
-        import {footer} from './Components/components.js'
+        import {footer,preloader} from './Components/components.js'
         document.querySelector("footer").innerHTML=footer();
+        document.querySelector(".preloader").innerHTML=preloader();
     </script>
 
     <!--LIVEDEMO_00 -->
