--- a/our-team.html
+++ b/our-team.html
@@ -34,25 +34,6 @@
 <body>
     <div class="ie-panel"><a href="https://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
     <div class="preloader">
-        <div class="preloader-body">
-            <div class="cssload-bell">
-                <div class="cssload-circle">
-                    <div class="cssload-inner"></div>
-                </div>
-                <div class="cssload-circle">
-                    <div class="cssload-inner"></div>
-                </div>
-                <div class="cssload-circle">
-                    <div class="cssload-inner"></div>
-                </div>
-                <div class="cssload-circle">
-                    <div class="cssload-inner"></div>
-                </div>
-                <div class="cssload-circle">
-                    <div class="cssload-inner"></div>
-                </div>
-            </div>
-        </div>
     </div>
     <div class="page">
         <!-- Page Header-->
@@ -361,8 +342,9 @@
     <script src="js/core.min.js"></script>
     <script src="js/script.js"></script>
     <script type="module">
-        import {footer} from './Components/components.js'
+        import {footer,preloader} from './Components/components.js'
         document.querySelector("footer").innerHTML=footer();
+        document.querySelector(".preloader").innerHTML=preloader();
     </script>
     <!-- Google Tag Manager --><noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-P9FT69" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <script>
