--- a/index.html
+++ b/index.html
@@ -616,10 +616,9 @@
     <script src="js/core.min.js"></script>
     <script src="js/script.js"></script>
     <script type="module">
-        import {footer,preloader,header} from './Components/components.js'
+        import {footer,preloader} from './Components/components.js'
         document.querySelector("footer").innerHTML=footer();
         document.querySelector(".preloader").innerHTML=preloader();
-        // document.querySelector(".page-header").innerHTML = header();
     </script>
 
     <!--LIVEDEMO_00 -->
