--- a/box-shadow.html
+++ b/box-shadow.html
@@ -278,10 +278,10 @@
                 </div>
             </header>
             <section class="breadcrumbs-custom">
-                <div class="parallax-container" data-parallax-img="images/breadcrumbs-bg.jpg">
+                <div class="parallax-container" data-parallax-img="images/Box-bg.jpg">
                     <div class="breadcrumbs-custom-body parallax-content">
                         <div class="container text-center">
-                            <h2 class="breadcrumbs-custom-title">Box Shadow</h2>
+                            <h2 class="breadcrumbs-custom-title" style="color: black;">Box Shadow</h2>
                         </div>
                     </div>
                 </div>
