--- a/icon-lists.html
+++ b/icon-lists.html
@@ -175,10 +175,10 @@
             </div>
         </header>
         <section class="breadcrumbs-custom">
-            <div class="parallax-container" data-parallax-img="images/breadcrumbs-bg.jpg">
+            <div class="parallax-container" data-parallax-img="images/breadcrumbs-bg.gif">
                 <div class="breadcrumbs-custom-body parallax-content">
                     <div class="container text-center">
-                        <h2 class="breadcrumbs-custom-title">Icon Lists</h2>
+                        <h2 class="breadcrumbs-custom-title" style="color: black;">Icon Lists</h2>
                     </div>
                 </div>
             </div>
