--- a/box-shadow.html
+++ b/box-shadow.html
@@ -69,7 +69,16 @@
                 }
             }
         </style>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZXM0YYD1TZ"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() { dataLayer.push(arguments); }
+            gtag('js', new Date());
+
+            gtag('config', 'G-ZXM0YYD1TZ');
+        </script>
     </head>
+
 
     <body>
         <div class="ie-panel"><a href="https://windows.microsoft.com/en-US/internet-explorer/"><img
