--- a/grid-gallery.html
+++ b/grid-gallery.html
@@ -30,6 +30,15 @@
                 display: block;
             }
         </style>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZXM0YYD1TZ"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() { dataLayer.push(arguments); }
+            gtag('js', new Date());
+
+            gtag('config', 'G-ZXM0YYD1TZ');
+        </script> F
     </head>
 
     <body>
@@ -374,9 +383,9 @@
         <script src="js/core.min.js"></script>
         <script src="js/script.js"></script>
         <script type="module">
-            import {footer,preloader} from './Components/components.js'
-        document.querySelector("footer").innerHTML=footer();
-        document.querySelector(".preloader").innerHTML=preloader();
+            import { footer, preloader } from './Components/components.js'
+            document.querySelector("footer").innerHTML = footer();
+            document.querySelector(".preloader").innerHTML = preloader();
         </script>
         <!-- Google Tag Manager --><noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-P9FT69" height="0"
                 width="0" style="display:none;visibility:hidden"></iframe></noscript>
