--- a/box-shadow.html
+++ b/box-shadow.html
@@ -287,11 +287,11 @@
                 </div>
             </header>
             <section class="breadcrumbs-custom">
-                <div class="parallax-container" data-parallax-img="images/Box-bg.jpg">
+                <div class="parallax-container" data-parallax-img="https://24.media.tumblr.com/tumblr_lzq2xliIJw1qd7m1so1_500.gif">
                     <div class="breadcrumbs-custom-body parallax-content">
-                        <div class="container text-center">
+                        <!-- <div class="container text-center">
                             <h2 class="breadcrumbs-custom-title" style="color: black;">Box Shadow</h2>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="breadcrumbs-custom-footer">
