--- a/buttons.html
+++ b/buttons.html
@@ -261,10 +261,10 @@
         </div>
       </header>
       <section class="breadcrumbs-custom">
-        <div class="parallax-container" data-parallax-img="images/breadcrumbs-bg1.png">
+        <div class="parallax-container" data-parallax-img="images/breadcrumbs-bg1.gif">
           <div class="breadcrumbs-custom-body parallax-content">
             <div class="container text-center">
-              <h2 class="breadcrumbs-custom-title" style="color:#3789EB;"  >Buttons</h2>
+              <!-- <h2 class="breadcrumbs-custom-title" style="color:#3789EB;"  >Buttons</h2> -->
             </div>
           </div>
         </div>
