--- a/icon-lists.html
+++ b/icon-lists.html
@@ -146,9 +146,9 @@
                                                             class="rd-megamenu-icon mdi mdi-apps"></span><span
                                                             class="rd-megamenu-text">Elements</span></div>
                                                     <ul class="rd-megamenu-list rd-megamenu-list-2">
-                                                        <li class="rd-megamenu-list-item"><a
-                                                                class="rd-megamenu-list-link"
-                                                                href="typography.html">Typography</a></li>
+                                                        <li class="rd-megamenu-list-item"><a class="rd-megamenu-list-link"
+                                                            href="box-shadow.html">Box
+                                                            shadow</a></li>
                                                         <li class="rd-megamenu-list-item"><a
                                                                 class="rd-megamenu-list-link"
                                                                 href="icon-lists.html">Icon lists</a></li>
@@ -267,11 +267,11 @@
                 </div>
             </header>
             <section class="breadcrumbs-custom">
-                <div class="parallax-container" data-parallax-img="images/breadcrumbs-bg.gif">
+                <div class="parallax-container" data-parallax-img="https://freefrontend.com/assets/img/css-weather-icons/Animated-Weather-Icons-Pure-CSS.gif">
                     <div class="breadcrumbs-custom-body parallax-content">
-                        <div class="container text-center">
+                        <!-- <div class="container text-center">
                             <h2 class="breadcrumbs-custom-title" style="color: black;">Icon Lists</h2>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="breadcrumbs-custom-footer">
