--- a/index.html
+++ b/index.html
@@ -300,7 +300,8 @@
             <section class="section section-inset-2 bg-default text-md-left">
                 <div class="container">
                     <div class="row row-30 align-items-center justify-content-center justify-content-xl-between">
-                        <div class="col-sm-6 col-md-5 col-lg-6 wow fadeInLeft"><img src="images/square-374x392.png"
+                        <!-- old box images path "images/square-374x392.png" -->
+                        <div class="col-sm-6 col-md-5 col-lg-6 wow fadeInLeft"><img src="https://thumbs.gfycat.com/AffectionateSeparateGazelle-size_restricted.gif"
                                 alt="" width="374" height="392" />
                         </div>
                         <div class="col-md-7 col-lg-6 col-xl-5">
