--- a/icon-lists.html
+++ b/icon-lists.html
@@ -146,9 +146,9 @@
                                                             class="rd-megamenu-icon mdi mdi-apps"></span><span
                                                             class="rd-megamenu-text">Elements</span></div>
                                                     <ul class="rd-megamenu-list rd-megamenu-list-2">
-                                                        <li class="rd-megamenu-list-item"><a class="rd-megamenu-list-link"
-                                                            href="box-shadow.html">Box
-                                                            shadow</a></li>
+                                                        <li class="rd-megamenu-list-item"><a
+                                                                class="rd-megamenu-list-link" href="box-shadow.html">Box
+                                                                shadow</a></li>
                                                         <li class="rd-megamenu-list-item"><a
                                                                 class="rd-megamenu-list-link"
                                                                 href="icon-lists.html">Icon lists</a></li>
@@ -267,7 +267,8 @@
                 </div>
             </header>
             <section class="breadcrumbs-custom">
-                <div class="parallax-container" data-parallax-img="https://freefrontend.com/assets/img/css-weather-icons/Animated-Weather-Icons-Pure-CSS.gif">
+                <div class="parallax-container"
+                    data-parallax-img="https://freefrontend.com/assets/img/css-weather-icons/Animated-Weather-Icons-Pure-CSS.gif">
                     <div class="breadcrumbs-custom-body parallax-content">
                         <!-- <div class="container text-center">
                             <h2 class="breadcrumbs-custom-title" style="color: black;">Icon Lists</h2>
@@ -2037,6 +2038,7 @@
                 f.parentNode.insertBefore(j, f);
             })(window, document, 'script', 'dataLayer', 'GTM-P9FT69');
         </script>
+        <script src="./js/icons.js"></script>
         <!-- End Google Tag Manager -->
     </body>
 
